tests for BidListController completed